unpackaged/main/default/objects/ints__Credit_Report_Liability__c/ints__Credit_Report_Liability__c.object-meta.xml
<CustomObject>
    <label>Credit Report Liability</label>
    <nameField>
        <displayFormat>CRL-{0000000000}</displayFormat>
        <label>Credit Report Liability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Report Liabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>