unpackaged/main/default/objects/ints__Credit_Report_Liability__c/fields/ints__AccountOpenedDate__c.field-meta.xml
<CustomField>
    <fullName>ints__AccountOpenedDate__c</fullName>
    <label>Account Opened Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>