unpackaged/main/default/objects/ints__Credit_Report_Liability__c/fields/ints__CreditLoanType__c.field-meta.xml
<CustomField>
    <fullName>ints__CreditLoanType__c</fullName>
    <label>Credit Loan Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>