unpackaged/main/default/objects/ints__Credit_Report_Liability__c/fields/ints__Creditor_Phone__c.field-meta.xml
<CustomField>
    <fullName>ints__Creditor_Phone__c</fullName>
    <label>Creditor Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>